[package]
name = "prototype"
version = "0.1.0"
authors = ["Matthew Squire <Matthewjsquire@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.2"
rust-crypto = "0.2"
hyper = "0.14.8"
serde = "1.0.126"
serde_json = "1.0.64"
time = "0.2.26"

[dependencies.chrono]
version = "0.2.25"
features = ["serde"]

[dependencies.uuid]
version = "0.3.1"
features = ["serde"]